# waldoctl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/waldoctl/: __init__.py  client.py  dry_run.py  joints.py  robot.py  status.py  sync_tools.py  tools.py  types.py
waldoctl/: __init__.py  client.py  dry_run.py  joints.py  results.py  robot.py  status.py  tools.py
