[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "waldoctl"
version = "0.1.0"
description = "Shared interface definitions for robot arm control"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["waldoctl*"]
